@@ -80,9 +80,7 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
             
             thisMeta.initInstance(this, props)
             
-            var initialize = this.initialize
-            
-            if (typeof initialize == 'function') initialize.call(this, props)
+            return thisMeta.hasMethod('initialize') && this.initialize(props) || this
         }
     },
     
