@@ -9,7 +9,7 @@ WHERE'S THE CONSTRUCTOR?
 ========================
 
 You do not need to define a constructor method for your classes. Really. Joose provides your classes with the default constructor which will initialize the attributes of your class.
-Instead, define an `initialize` method, which will be called after all attributes were initialized.
+Instead, define the `initialize` method, which will be called after all attributes were initialized.
 
 
 OBJECT CONSTRUCTION AND ATTRIBUTES
@@ -52,21 +52,20 @@ THE INSTANTIATION WORKFLOW
 
 >`var attrs = this.BUILD(property1, property2)`
 
->`// init attributes`
+>`return this.initialize(attrs) || this`
 
->`this.initialize(attrs)`
-
-When you build a class using Joose, it provides a *default constructor* for you. This constructor will perform some low-level initialization and then will call a `BUILD` method with the same arguments.
+When you building a class with Joose, it provides a *default constructor* for you. This constructor will perform some low-level initialization and then will call a `BUILD` method with the same arguments.
 
 `BUILD` method should return an object, which properties directly corresponds to class attributes - they will be used to initialize them.
 
-**Important**: The order of attributes initialization is not defined. You shouldn't rely on any some attribute to be already known specific argument to be initialized  
+**Important**: The order of attributes initialization is *not defined*. You shouldn't rely on it. If you need to initialize some attribute after another, consider to use [lazy attributes](http://openjsan.org/go/?l=JooseX.Attribute.Lazy)  
 
-Default `BUILD` method just checks whether the 1st arguments passed to it is an `Object`, if so - its returned.  
+Default `BUILD` method just checks whether the 1st arguments passed to it is an `Object`, if so - its returned.
 
-The properties of the object returned from `BUILD` are used to initialize the attributes.
+The object, returned from `BUILD` method is passed to `initialize`. In turn, if `initialize` method will return something, 
+that value will be returned from constructor, otherwise the instance itself will be returned. 
 
-If you inherit from parent class, you need to call the inherited `initialize`, usually you may just define an `after` modifier (see above for an example):
+If you inherit from parent class, you need to call the inherited `initialize`. You may just define an `after` modifier (see above for an example).
 
 
 CUSTOM PARAMETERS TO CONSTRUCTOR
@@ -117,6 +116,9 @@ You don't need to manually pre-create the namespace for your class - just go ahe
             }
         })
         
+        var point = new MyApp.Point()
+        
+        
         Class("MyApp.Point.ThreeD", {
             isa: Point,
             
@@ -125,14 +127,15 @@ You don't need to manually pre-create the namespace for your class - just go ahe
             }
         })
 
+        var point3d = new MyApp.Point.ThreeD()
+        
+        
         Class("MyApp", {
             has: {
                 name: null
             }
         })
         
-        var point = new MyApp.Point()
-        var point3d = new MyApp.Point.ThreeD()
         var myapp = new MyApp()
 
 Note, how `MyApp` class was created already *after* its namespace segment was declared. This is a perfectly valid declaration.
@@ -209,9 +212,6 @@ methods (see [Joose.Manual.Mutability][1] for details)
         })
 
 **NOTE:** `body` builder is a correct place to perform some action after creation of class, because in general case, the creation may be asynchronous (for dependency loading for example).
-
-
-
 
 
 
