@@ -1,7 +1,7 @@
 ;(function () {
 
     Joose.Proto.Class = function () {
-        this.initialize(this.BUILD.apply(this, arguments))
+        return this.initialize(this.BUILD.apply(this, arguments)) || this
     }
     
     var bootstrap = {
@@ -97,7 +97,7 @@
         
         processStem : function () {
             // '|| {}' for non-Joose superclasses
-            var superMeta = this.superClass.meta || {}
+            var superMeta       = this.superClass.meta || {}
             
             this.methods        = Joose.O.getMutableCopy(superMeta.methods || {})
             this.attributes     = Joose.O.getMutableCopy(superMeta.attributes || {})
@@ -113,11 +113,11 @@
             return function () {
                 var args = this.BUILD.apply(this, arguments)
                 
-                this.meta.initInstance(this, args)
+                var thisMeta    = this.meta
                 
-                var initialize = this.initialize
+                thisMeta.initInstance(this, args)
                 
-                if (typeof initialize == 'function') initialize.call(this, args)
+                return thisMeta.hasMethod('initialize') && this.initialize(args) || this
             }
         },
         
