@@ -63,6 +63,7 @@
                 '053_using_class_as_role.t.js',
                 '054_meta_roles.t.js',
                 '055_role_to_instance_application.t.js',
+                '056_arbitrary_object_from_constructor.t.js',
                 '060_modules.t.js',
                 '070_reflection.t.js'
                 //,
